[tool.poetry]
name = "rubix-user-management"
version = "1.3.1"
description = "CodeBase for starting up Flask App"
authors = ["NubeIO <tech-support@nube-io.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"
click = "^7.1.2"
rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.3.0" }
PyJWT = "^2.1.0"
rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1" }
pycrypto = "^2.6.1"
Flask-Migrate = "^2.6.0"
Flask-Script = "^2.0.6"
rubix-mqtt = { git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.2.0" }
shortuuid = "^1.0.1"
gevent = "^21.1.2"
Flask = "1.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
